Use a slightly hacky way to fix file open events on macOS
Even though this approach exposes a private JavaFX API,
it ensures better compatibility with the rest of the Fx
framework than java.awt.Desktop.